<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fore_ground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/myflora_personal_use"
        android:gravity="center"
        android:text="@string/student_manager"
        android:textColor="#546E7A"
        android:textSize="100sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/save_login_account"
        android:textColor="#304FFE"
        app:layout_constraintStart_toStartOf="@+id/editText_pass"
        app:layout_constraintTop_toBottomOf="@+id/editText_pass" />

    <EditText
        android:id="@+id/editText_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/your_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#ff85a1"
        android:textColorHint="#fae0e4"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_login"
        app:layout_constraintStart_toStartOf="@+id/textView_login"
        app:layout_constraintTop_toBottomOf="@+id/textView_login" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#ff85a1"
        android:textColorHint="#fae0e4"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editText_id"
        app:layout_constraintStart_toStartOf="@+id/editText_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_id" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#E2EAFC"
        android:fontFamily="@font/myflora_personal_use"
        android:gravity="center|center_vertical"
        android:text="@string/login"
        android:textColor="@color/purple_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/editText_pass"
        app:layout_constraintStart_toStartOf="@+id/editText_pass"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/my_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>